[[bin]]
name = "2390"
path = "/Users/jeffrey/Projects/rust/src/2390/main.rs"

[[bin]]
name = "946"
path = "/Users/jeffrey/Projects/rust/src/946/main.rs"

[[bin]]
name = "516"
path = "/Users/jeffrey/Projects/rust/src/516/main.rs"

[[bin]]
name = "71"
path = "/Users/jeffrey/Projects/rust/src/71/main.rs"

[package]
name = "RustLeetcode"
version = "1.0.0"
author = "Jeffrey Qian <jeffreyqdd@gmail.com>"

[dependencies]
bencher = "0.1.5"
